# tsukiyo

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code_lint.yml  commit_lint.yml  lint.yml  test.yml
src/: main.py
src/audio/: __init__.py
src/audio/whisper/: context.py  server.py  transcribe.py
src/utils/: singleton.py
tests/: test_sample.py
tests/audio/: test_audio.py
tests/main/: test_main.py
tests/utils/: test_singleton.py
