[tool.poetry]
name = "no-named-yet"
version = "0.1.0"
description = ""
authors = ["faker2048 <nspyia2002@gmail.com>", "Doun <imdounx@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "no_named_yet"}]

[tool.poetry.dependencies]
python = "3.10"
pyink = "^23.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
