[tool.poetry]
name = "tsukiyo"
version = "0.1.0"
description = ""
authors = ["faker2048 <nspyia2002@gmail.com>", "Dounx <imdounx@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
fastapi = "^0.101.0"
loguru = "^0.7.0"
fastapi = "^0.101.0"

[tool.poetry.scripts]
tsukiyo = 'src.main:main'

[tool.poetry.group.dev.dependencies]
pyink = "^23.5.0"
pre-commit = "^3.3.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
